ignore e2e folder for jest tests

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -124,7 +124,8 @@
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
-    ]
+    ],
+    "testPathIgnorePatterns": ["./e2e/"]
   },
   "detox": {
     "configurations": {
