--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -2,7 +2,8 @@ name: Build Android
 on: [push, pull_request]
 
 jobs:
-  build_apk:
+
+  build_debug_apk:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -14,7 +15,7 @@ jobs:
         run: |
           yarn install
           echo "::add-path::/home/runner/work/BrightID/BrightID/BrightID/node_modules/.bin"
-      - name: build Android
+      - name: debug build
         run: |
           touch ./android/app/src/main/assets/index.android.bundle
           react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res/
@@ -24,3 +25,27 @@ jobs:
         with:
           name: brightId-debug.apk
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/debug/app-debug.apk
+
+  build_release_apk:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: BrightID
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          yarn install
+          echo "::add-path::/home/runner/work/BrightID/BrightID/BrightID/node_modules/.bin"
+      - name: Decrypt keystore and Google Credential
+        run: ./scripts/decrypt.sh
+        env:
+          ENCRYPT_PASSWORD: ${{ secrets.ENCRYPT_PASSWORD }}
+      - name: release build
+        run: cd android && ./gradlew assembleRelease && cd ..
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: brightId-release.apk
+          path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/release/app-release.apk
