--- a/BrightID/.gitignore
+++ b/BrightID/.gitignore
@@ -23,13 +23,11 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
 *.iml
 .secret
-keystore.properties
 
 # node.js
 #
@@ -72,7 +70,6 @@ core-js@*
 *-google-services.json
 Podfile.lock
 assetlinks.json
-Podfile.lock
 yarn.lock
 ios/Pods/
 ios/Pods/Target Support Files/Pods-BrightID/
@@ -82,3 +79,6 @@ ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
 ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
 ios/Pods/Pods.xcodeproj/project.pbxproj
 ios/Pods/Manifest.lock
+/android/app/src/main/res/draw*/
+/android/app/src/main/res/mipmap*/
+/android/app/src/main/res/raw/
