--- a/BrightID/ios/BrightID.xcodeproj/xcshareddata/xcschemes/BrightID.xcscheme
+++ b/BrightID/ios/BrightID.xcodeproj/xcshareddata/xcschemes/BrightID.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "BrightID.app"
+               BuildableName = "BrightID Testing.app"
                BlueprintName = "BrightID"
                ReferencedContainer = "container:BrightID.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BrightID.app"
+            BuildableName = "BrightID Testing.app"
             BlueprintName = "BrightID"
             ReferencedContainer = "container:BrightID.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BrightID.app"
+            BuildableName = "BrightID Testing.app"
             BlueprintName = "BrightID"
             ReferencedContainer = "container:BrightID.xcodeproj">
          </BuildableReference>
