remove google-services json

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgeme
 BrightID/yarn.lock
 /BrightID/flow-typed/npm/
 BrightID/yarn.lock
+BrightID/android/app/google-services.json
