--- a/BrightID/.gitignore
+++ b/BrightID/.gitignore
@@ -72,12 +72,6 @@ Podfile.lock
 assetlinks.json
 yarn.lock
 ios/Pods/
-ios/Pods/Target Support Files/Pods-BrightID/
-ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
-ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.plist
-ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
-ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
-ios/Pods/Pods.xcodeproj/project.pbxproj
-ios/Pods/Manifest.lock
 keystore.properties
-BrightID/android/app/google-services.json-prod
+android/app/google-services.json-prod
+android/app/google-services.json
