--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -1,30 +1,86 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="org.brightid">
+<manifest
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  package="org.brightid"
+>
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
   <application
-      tools:replace="android:allowBackup"
-      android:name=".MainApplication"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      android:windowSoftInputMode="adjustResize"
-      android:usesCleartextTraffic="true">
+    tools:replace="android:allowBackup"
+    android:name=".MainApplication"
+    android:label="@string/app_name"
+    android:icon="@mipmap/ic_launcher"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:allowBackup="false"
+    android:theme="@style/AppTheme"
+    android:windowSoftInputMode="adjustResize"
+    android:usesCleartextTraffic="true"
+  >
+
     <meta-data
-        android:name="asset_statements"
-        android:resource="@string/asset_statements" />
+      android:name="com.dieam.reactnativepushnotification.notification_channel_name"
+      android:value="brightid"
+    />
+    <meta-data
+      android:name="com.dieam.reactnativepushnotification.notification_channel_description"
+      android:value="brightid notifications channel"
+    />
+
+    <!-- Change the value to true to enable pop-up for in foreground (remote-only, for local use ignoreInForeground) -->
+    <meta-data
+      android:name="com.dieam.reactnativepushnotification.notification_foreground"
+      android:value="false"
+    />
+    <!-- Change the value to false if you don't want the creation of the default channel -->
+    <meta-data
+      android:name="com.dieam.reactnativepushnotification.channel_create_default"
+      android:value="true"
+    />
+    <!-- Change the resource name to your App's accent color - or any other color you want -->
+    <meta-data
+      android:name="com.dieam.reactnativepushnotification.notification_color"
+      android:resource="@color/orange"
+    /> <!-- or @android:color/{name} to use a standard color -->
+
+    <receiver
+      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions"
+    />
+    <receiver
+      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher"
+    />
+    <receiver
+      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
+    >
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter>
+    </receiver>
+
+    <service
+      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+      android:exported="false"
+    >
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
+    <meta-data
+      android:name="asset_statements"
+      android:resource="@string/asset_statements"
+    />
 
     <activity
-        android:name=".SplashActivity"
-        android:theme="@style/SplashTheme"
-        android:label="@string/app_name"
-        android:screenOrientation="portrait">
+      android:name=".SplashActivity"
+      android:theme="@style/SplashTheme"
+      android:label="@string/app_name"
+      android:screenOrientation="portrait"
+    >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -33,13 +89,14 @@
     </activity>
 
     <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
-        android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustResize"
-        android:screenOrientation="portrait"
-        android:exported="true">
+      android:name=".MainActivity"
+      android:label="@string/app_name"
+      android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+      android:launchMode="singleTask"
+      android:windowSoftInputMode="adjustResize"
+      android:screenOrientation="portrait"
+      android:exported="true"
+    >
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
 
@@ -55,12 +112,15 @@
         <category android:name="android.intent.category.BROWSABLE" />
 
         <data
-            android:scheme="https"
-            android:host="app.brightid.org"
-            android:pathPattern="/.*" />
+          android:scheme="https"
+          android:host="app.brightid.org"
+          android:pathPattern="/.*"
+        />
       </intent-filter>
     </activity>
-    <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <activity
+      android:name="com.facebook.react.devsupport.DevSettingsActivity"
+    />
   </application>
 
 </manifest>
