--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
@@ -54,6 +55,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-popup-menu": "^0.15.8",
+    "react-native-push-notification": "^5.1.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^3.0.6",
