--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "apisauce": "^1.1.1",
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
