--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -9,6 +9,7 @@
     "start:detox": "RN_SRC_EXT=e2e.js react-native start",
     "build:detox:android": "detox build -c android.emu.debug",
     "build:detox:ios": "detox build -c ios.sim.debug",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
     "test:android": "detox test -c android.emu.debug",
     "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
