--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
+    "@react-native-community/clipboard": "^1.2.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
