add fonts / redesign connection card

--- a/BrightID/ios/BrightID/Info.plist
+++ b/BrightID/ios/BrightID/Info.plist
@@ -55,6 +55,9 @@
 		<string>Poppins.otf</string>
 		<string>Poppins-Medium.otf</string>
 		<string>Poppins-Bold.otf</string>
+		<string>Poppins-Regular.otf</string>
+		<string>Poppins-Light.otf</string>
+		<string>Poppins-ExtraLight.otf</string>
 		<string>ApexNew-Book.otf</string>
 		<string>ApexNew-Light.otf</string>
 		<string>ApexNew-Medium.otf</string>
