--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,12 +18,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+          with:
+            path: '**/node_modules'
+            key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: install dependencies
         run: yarn --frozen-lockfile
+
       - name: execute tests
         run: npm run test
         env:
