--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -34,6 +34,6 @@ jobs:
         run: yarn --frozen-lockfile
 
       - name: execute tests
-        run: npm run test
+        run: yarn test
         env:
           CI: true
