--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -25,12 +25,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Cache node modules
+        id: yarn-cache # needed below to check for cache hit or miss
         uses: actions/cache@v2
         with:
           path: './BrightID/node_modules'
           key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
 
       - name: install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'  # only install when no cache found
         run: yarn --frozen-lockfile
 
       - name: execute tests
