--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -4,23 +4,44 @@ on: [push, pull_request]
 jobs:
 
   build_debug_apk:
+
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash
         working-directory: BrightID
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
       - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache node modules
+        id: yarn-cache-debug # needed below to check for cache hit or miss
+        uses: actions/cache@v2
+        with:
+          path: './BrightID/node_modules'
+          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+
       - name: Install dependencies
-        run: |
-          yarn install
-          echo "::add-path::/home/runner/work/BrightID/BrightID/BrightID/node_modules/.bin"
+        if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
+        run: yarn --frozen-lockfile
+
       - name: debug build
         run: |
           touch ./android/app/src/main/assets/index.android.bundle
           mv ./android/app/google-services.json-dev ./android/app/google-services.json
           react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res/
           cd android && ./gradlew assembleDebug && cd ..
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -28,17 +49,37 @@ jobs:
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/debug/app-debug.apk
 
   build_release_apk:
+
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash
         working-directory: BrightID
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
       - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache node modules
+        id: yarn-cache-release # needed below to check for cache hit or miss
+        uses: actions/cache@v2
+        with:
+          path: './BrightID/node_modules'
+          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+
       - name: Install dependencies
-        run: |
-          yarn install
-          echo "::add-path::/home/runner/work/BrightID/BrightID/BrightID/node_modules/.bin"
+        if: steps.yarn-cache-release.outputs.cache-hit != 'true'  # only install when no cache found
+        run: yarn --frozen-lockfile
+
       - name: Decrypt keystore and Google Credential
         run: ./scripts/decrypt.sh
         env:
