change path in github action

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -37,10 +37,9 @@ jobs:
 
       - name: debug build
         run: |
-          echo "::add-path::/home/runner/work/BrightID/BrightID/BrightID/node_modules/.bin"
           touch ./android/app/src/main/assets/index.android.bundle
           mv ./android/app/google-services.json-dev ./android/app/google-services.json
-          react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res/
+          ./node_modules/.bin/react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res/
           cd android && ./gradlew assembleDebug && cd ..
 
       - name: Upload Artifact
