upgrade 3rd party libraries and add android notification channel

--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -22,24 +22,10 @@
     android:usesCleartextTraffic="true"
   >
 
-    <meta-data
-      android:name="com.dieam.reactnativepushnotification.notification_channel_name"
-      android:value="brightid"
-    />
-    <meta-data
-      android:name="com.dieam.reactnativepushnotification.notification_channel_description"
-      android:value="brightid notifications channel"
-    />
-
     <!-- Change the value to true to enable pop-up for in foreground (remote-only, for local use ignoreInForeground) -->
     <meta-data
       android:name="com.dieam.reactnativepushnotification.notification_foreground"
       android:value="false"
-    />
-    <!-- Change the value to false if you don't want the creation of the default channel -->
-    <meta-data
-      android:name="com.dieam.reactnativepushnotification.channel_create_default"
-      android:value="true"
     />
     <!-- Change the resource name to your App's accent color - or any other color you want -->
     <meta-data
@@ -58,6 +44,8 @@
     >
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
+            <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
         </intent-filter>
     </receiver>
 
