--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -36,7 +36,7 @@
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
-    "detox": "^17.6.1",
+    "detox": "^17.8.0",
     "ed2curve": "^0.3.0",
     "emittery": "^0.6.0",
     "events": "^3.1.0",
@@ -157,7 +157,7 @@
       },
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app",
-        "build": "RN_SRC_EXT=e2e.js xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "device": {
           "type": "iPhone 11 Pro Max"
@@ -165,7 +165,7 @@
       },
       "ios.sim.release": {
         "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/BrightID.app",
-        "build": "RN_SRC_EXT=e2e.js xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
+        "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "device": {
           "type": "iPhone 11 Pro Max"
