--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     android:windowSoftInputMode="adjustResize"
     android:allowBackup="true"
     android:restoreAnyVersion="true"
-    android:usesCleartextTraffic="true"=
+    android:usesCleartextTraffic="true"
     android:hasFragileUserData="true"
     android:largeHeap="true"
   >
