--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -42,12 +42,14 @@
     "events": "^3.1.0",
     "fast-json-stable-stringify": "^2.1.0",
     "husky": "^4.2.1",
+    "i18next": "^19.8.2",
     "moment": "^2.27.0",
     "prop-types": "^15.6.2",
     "qrcode": "^1.4.4",
     "ramda": "^0.27.0",
     "react": "16.13.1",
     "react-dom": "16.11.0",
+    "react-i18next": "^11.7.3",
     "react-native": "0.63.3",
     "react-native-actionsheet": "^2.4.2",
     "react-native-barcode-mask": "^1.2.4",
@@ -59,6 +61,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-keychain": "^6.1.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^1.4.2",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-popup-menu": "^0.15.8",
     "react-native-push-notification": "^6.1.1",
