--- a/BrightID/android/settings.gradle
+++ b/BrightID/android/settings.gradle
@@ -4,3 +4,6 @@ include ':app'
 
 include ':react-native-keychain'
 project(':react-native-keychain').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-keychain/android')
+
+include ':app', ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
