--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -33,6 +33,9 @@
     "@react-navigation/stack": "^5.7.0",
     "@reduxjs/toolkit": "^1.4.0",
     "apisauce": "^1.1.1",
+    "appcenter": "^3.1.2",
+    "appcenter-analytics": "^3.1.2",
+    "appcenter-crashes": "^3.1.2",
     "base64-js": "^1.3.0",
     "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
@@ -52,6 +55,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-barcode-mask": "^1.2.4",
     "react-native-camera": "^3.31.0",
+    "react-native-code-push": "^6.3.0",
     "react-native-dropdownalert": "^4.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.35.0",
