--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,7 @@
 {
   "name": "BrightID",
-  "version": "3.0.0",
+  "version": "3.0",
+  "latestCodePushLabel": "0",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
