--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -98,6 +98,7 @@
     "babel-jest": "^26.3.0",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
