--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BrightID",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
@@ -27,10 +27,10 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/push-notification-ios": "^1.7.1",
-    "@react-native-picker/picker": "^1.8.3",
-    "@react-navigation/drawer": "^5.10.0",
-    "@react-navigation/native": "^5.8.0",
-    "@react-navigation/stack": "^5.10.0",
+    "@react-native-picker/picker": "1.8.3",
+    "@react-navigation/drawer": "5.10.4",
+    "@react-navigation/native": "5.8.4",
+    "@react-navigation/stack": "5.12.1",
     "@reduxjs/toolkit": "^1.4.0",
     "apisauce": "^1.1.1",
     "appcenter": "^3.1.2",
