--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -48,6 +48,52 @@ jobs:
           name: brightId-debug.apk
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/debug/app-debug.apk
 
+  build_staging_apk:
+
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: BrightID
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache node modules
+        id: yarn-cache-debug # needed below to check for cache hit or miss
+        uses: actions/cache@v2
+        with:
+          path: './BrightID/node_modules'
+          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
+        run: yarn --frozen-lockfile
+
+      - name: Decrypt keystore and Google Credential
+        run: ./scripts/staging.sh
+        env:
+          ENCRYPT_PASSWORD: ${{ secrets.ENCRYPT_PASSWORD }}
+
+      - name: staging build
+        run: cd android && ./gradlew assembleStaging && cd ..
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: brightId-staging.apk
+          path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/staging/app-staging.apk
+
   build_release_apk:
 
     runs-on: ubuntu-latest
