--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -27,6 +27,7 @@
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.7.1",
+    "@react-native-community/slider": "3.0.3",
     "@react-native-picker/picker": "1.8.3",
     "@react-navigation/drawer": "5.10.4",
     "@react-navigation/native": "5.8.4",
