--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -92,33 +92,33 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@mermaid-js/mermaid-cli": "^8.5.3",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@babel/runtime": "^7.12.5",
+    "@mermaid-js/mermaid-cli": "^8.8.2-beta.8",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^22.14.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "flow-bin": "0.122.0",
     "flow-typed": "^3.2.0",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.3.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "metro-react-native-babel-preset": "^0.64.0",
     "mock-async-storage": "^2.2.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "16.13.1",
