upgrade deps replace async-storage

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BrightID",
-  "version": "3.1.3",
+  "version": "3.2.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
@@ -21,104 +21,105 @@
     "mermaid": "find ./diagrams -type f -name *.mmd -exec mmdc -i {} \\;"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "^3.8.0",
-    "@react-native-community/async-storage": "^1.7.0",
-    "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/push-notification-ios": "^1.7.1",
-    "@react-native-picker/picker": "1.8.3",
-    "@react-navigation/drawer": "5.10.4",
-    "@react-navigation/native": "5.8.4",
-    "@react-navigation/stack": "5.12.1",
-    "@reduxjs/toolkit": "^1.4.0",
-    "apisauce": "^1.1.1",
-    "appcenter": "^3.1.2",
-    "appcenter-analytics": "^3.1.2",
-    "appcenter-crashes": "^3.1.2",
-    "base64-js": "^1.3.0",
-    "buffer": "^5.2.1",
-    "crypto-js": "^3.1.9-1",
-    "detox": "^17.8.0",
-    "ed2curve": "^0.3.0",
-    "emittery": "^0.6.0",
-    "events": "^3.1.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "husky": "^4.2.1",
-    "i18next": "^19.8.3",
-    "moment": "^2.27.0",
-    "prop-types": "^15.6.2",
-    "qrcode": "^1.4.4",
-    "ramda": "^0.27.0",
+    "@expo/react-native-action-sheet": "3.8.0",
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/blur": "3.6.0",
+    "@react-native-community/clipboard": "1.5.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/push-notification-ios": "1.7.1",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/drawer": "5.10.7",
+    "@react-navigation/native": "5.8.7",
+    "@react-navigation/stack": "5.12.4",
+    "@reduxjs/toolkit": "1.4.0",
+    "apisauce": "1.1.2",
+    "appcenter": "3.1.2",
+    "appcenter-analytics": "3.1.2",
+    "appcenter-crashes": "3.1.2",
+    "base64-js": "1.3.1",
+    "buffer": "5.6.0",
+    "crypto-js": "3.3.0",
+    "detox": "17.10.3",
+    "ed2curve": "0.3.0",
+    "emittery": "0.6.0",
+    "events": "3.2.0",
+    "fast-json-stable-stringify": "2.1.0",
+    "husky": "4.3.0",
+    "i18next": "19.8.3",
+    "moment": "2.29.1",
+    "prop-types": "15.7.2",
+    "qrcode": "1.4.4",
+    "ramda": "0.27.1",
     "react": "16.13.1",
     "react-dom": "16.11.0",
-    "react-i18next": "^11.7.3",
+    "react-i18next": "11.7.3",
     "react-native": "0.63.3",
-    "react-native-actionsheet": "^2.4.2",
-    "react-native-barcode-mask": "^1.2.4",
-    "react-native-camera": "^3.31.0",
-    "react-native-code-push": "^6.3.0",
-    "react-native-dropdownalert": "^4.2.1",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-image-crop-picker": "^0.35.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-keychain": "^6.2.0",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-localize": "^1.4.2",
-    "react-native-modal-overlay": "^1.3.1",
-    "react-native-popup-menu": "^0.15.8",
-    "react-native-push-notification": "^6.1.1",
-    "react-native-randombytes": "^3.6.0",
-    "react-native-reanimated": "^1.8.0",
-    "react-native-safe-area-context": "^3.0.6",
-    "react-native-screens": "^2.12.0",
-    "react-native-snap-carousel": "^4.0.0-beta.5",
-    "react-native-spinkit": "^1.5.1",
-    "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-swipe-list-view": "^3.2.5",
-    "react-native-tab-view": "^2.14.4",
-    "react-native-vector-icons": "^7.0.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0",
-    "stream": "^0.0.2",
-    "timers": "^0.1.1",
-    "toggle-switch-react-native": "^2.1.0",
+    "react-native-actionsheet": "2.4.2",
+    "react-native-barcode-mask": "1.2.4",
+    "react-native-camera": "3.40.0",
+    "react-native-code-push": "6.4.0",
+    "react-native-dropdownalert": "4.3.0",
+    "react-native-gesture-handler": "1.8.0",
+    "react-native-image-crop-picker": "0.35.1",
+    "react-native-keyboard-aware-scroll-view": "0.9.3",
+    "react-native-keychain": "6.2.0",
+    "react-native-linear-gradient": "2.5.6",
+    "react-native-localize": "1.4.3",
+    "react-native-modal-overlay": "1.3.1",
+    "react-native-popup-menu": "0.15.9",
+    "react-native-push-notification": "6.1.2",
+    "react-native-randombytes": "3.6.0",
+    "react-native-reanimated": "1.13.1",
+    "react-native-safe-area-context": "3.1.8",
+    "react-native-screens": "2.13.0",
+    "react-native-snap-carousel": "4.0.0-beta.6",
+    "react-native-spinkit": "1.5.1",
+    "react-native-status-bar-height": "2.5.0",
+    "react-native-svg": "12.1.0",
+    "react-native-swipe-list-view": "3.2.5",
+    "react-native-tab-view": "2.15.2",
+    "react-native-vector-icons": "7.1.0",
+    "react-redux": "7.2.1",
+    "redux": "4.0.5",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0",
+    "rn-fetch-blob": "0.12.0",
+    "stream": "0.0.2",
+    "timers": "0.1.1",
+    "toggle-switch-react-native": "2.3.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
-    "xml2js": "^0.4.19"
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@mermaid-js/mermaid-cli": "^8.5.3",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@babel/runtime": "^7.12.5",
+    "@mermaid-js/mermaid-cli": "^8.8.2-beta.8",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^22.14.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
-    "flow-bin": "^0.122.0",
+    "flow-bin": "0.122.0",
     "flow-typed": "^3.2.0",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.3.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "metro-react-native-babel-preset": "^0.64.0",
     "mock-async-storage": "^2.2.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "16.13.1",
@@ -138,7 +139,7 @@
       "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
+      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-async-storage/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
     ],
     "testPathIgnorePatterns": [
       "./e2e/"
