--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -172,8 +172,8 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
-        versionCode 33
-        versionName "3.1.0"
+        versionCode 34
+        versionName "3.2.0"
         multiDexEnabled true
         testBuildType System.getProperty('testBuildType', 'debug')  // This will later be used to control the test apk build type
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -218,14 +218,13 @@ android {
             resValue "string", "CodePushDeploymentKey", "G8q6_0EW9AkaXAy3hO7Ye_LAhDfisOHpFPvRF"
         }
         staging {
-            signingConfig signingConfigs.staging
             applicationIdSuffix ".staging"
+            versionNameSuffix '-STAGING'
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.staging
             resValue "string", "CodePushDeploymentKey", "oCnsVbQLVhCjd_xE1BAsPYMRApddDWiwqiuhl"
             matchingFallbacks = ['release']
-            
         }
         debug {
             signingConfig signingConfigs.debug
