--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "3.8.0",
-    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-async-storage/async-storage": "1.13.2",
     "@react-native-community/blur": "3.6.0",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/masked-view": "0.1.10",
