--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -87,7 +87,8 @@
     "timers": "0.1.1",
     "toggle-switch-react-native": "2.3.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
-    "xml2js": "0.4.23"
+    "xml2js": "0.4.23",
+    "expr-eval": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
