--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -82,6 +82,7 @@
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
+    "reselect": "^4.0.0",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
