--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -28,6 +28,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/slider": "3.0.3",
+    "@react-native-community/viewpager": "^4.2.1",
     "@react-native-picker/picker": "1.9.4",
     "@react-navigation/drawer": "5.11.4",
     "@react-navigation/native": "5.8.10",
@@ -66,6 +67,7 @@
     "react-native-linear-gradient": "2.5.6",
     "react-native-localize": "2.0.1",
     "react-native-modal-overlay": "1.3.1",
+    "react-native-navigation-bar-color": "^2.0.1",
     "react-native-popup-menu": "0.15.9",
     "react-native-push-notification": "6.1.3",
     "react-native-randombytes": "3.6.0",
