--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -48,6 +48,7 @@
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.5",
     "i18next": "19.8.4",
+    "lodash": "^4.17.20",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "qrcode": "1.4.4",
@@ -83,6 +84,7 @@
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
+    "reselect": "^4.0.0",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
