remove react-native-status-bar-height

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -74,7 +74,6 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.15.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-status-bar-height": "2.6.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "2.15.2",
     "react-native-vector-icons": "7.1.0",
@@ -138,7 +137,7 @@
       "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-async-storage/async-storage|react-native-gesture-handler|react-native-platform-touchable|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
+      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-async-storage/async-storage|react-native-gesture-handler|react-native-platform-touchable|react-native-vector-icons|react-native-spinkit|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
     ],
     "testPathIgnorePatterns": [
       "./e2e/"
