Reduce detox test flakiness
- Allow more time to load random profile pic
- Allow more time to pick up new pending connections
- Change random profile pic provider from picsum to loremflickr
- Use AOSP emulator image without google services for running tests as recommended by detox

--- a/BrightID/.detoxrc.json
+++ b/BrightID/.detoxrc.json
@@ -14,7 +14,7 @@
       "build": "cd android && RN_SRC_EXT=e2e.js ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
       "type": "android.emulator",
       "device": {
-        "avdName": "Pixel_2_XL_API_28"
+        "avdName": "Pixel_API_28_AOSP"
       }
     },
     "android.emu.release": {
@@ -22,7 +22,7 @@
       "build": "cd android && RN_SRC_EXT=e2e.js ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
       "type": "android.emulator",
       "device": {
-        "avdName": "Pixel_2_XL_API_28"
+        "avdName": "Pixel_API_28_AOSP"
       }
     },
     "ios.sim.debug": {
