update more packages and podfiles

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -48,18 +48,18 @@
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
     "i18next": "19.8.6",
-    "lodash": "^4.17.20",
+    "lodash": "4.17.20",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "qrcode": "1.4.4",
     "ramda": "0.27.1",
     "react": "16.13.1",
     "react-dom": "16.11.0",
-    "react-i18next": "11.7.3",
+    "react-i18next": "11.8.5",
     "react-native": "0.63.4",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "3.42.0",
-    "react-native-code-push": "6.4.0",
+    "react-native-code-push": "7.0.0",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.9.0",
     "react-native-image-crop-picker": "0.35.3",
