--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -34,13 +34,13 @@ target 'BrightID' do
   #   end
   # end
 
-  post_install do |installer|
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
-      end
-    end
-  end
+  # post_install do |installer|
+  #   installer.pods_project.targets.each do |target|
+  #     target.build_configurations.each do |config|
+  #       config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
+  #     end
+  #   end
+  # end
     
 end
 
