use react-native-modpow to increase performance

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -94,6 +94,7 @@
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
     "xml2js": "0.4.23",
     "jsbn": "^1.1.0",
+    "react-native-modpow": "^1.1.0",
     "expr-eval": "^2.0.2"
   },
   "devDependencies": {
