--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -15,6 +15,8 @@ target 'BrightID' do
   # pod 'AppCenter/Analytics', '~> 3.3.4'
   # pod 'AppCenterReactNativeShared', '~> 3.1.2'
 
+  pod 'react-native-modpow', :path => '../node_modules/react-native-modpow'
+
   target 'BrightIDTests' do
     inherit! :complete
     # Pods for testing
