Revert "Use ubuntu 18 for building"
This reverts commit effc8ee51fffe4624d251a260580453f13d05a2e.

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -5,7 +5,7 @@ jobs:
 
   build_debug_apk:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     defaults:
       run:
@@ -50,7 +50,7 @@ jobs:
 
   build_staging_apk:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     defaults:
       run:
@@ -96,7 +96,7 @@ jobs:
 
   build_release_apk:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     defaults:
       run:
